# Qubit-measure

./: .env.example  .gitignore  .markdownlint.json  .mcp.json  AI_NOTE.md  CLAUDE.md  JUPYTEXT_USAGE.md  Labber  README.md  check_qick.py  check_qick_src.py  circle_fit.py  data_server.py  ef_qubit.py  fix_tests.py  fluxdep_fit.py  gui_review_2026-06-12.md  mist_tls_analysis.md  pyproject.toml  requirements.txt  run_gui.bat  run_gui.py  save_files.txt  single_qubit.py  specfic.py  sync.py  sync_md2nb.cmd  sync_md2nb.sh  sync_nb2md.cmd  sync_nb2md.sh  sync_notebooks.sh  test_issue.py  test_label_behavior.py  update_increg_merge.py
.agents/: mcp_config.json  opencode.json
.agents/agents/: contract-planner.md  integration-reviewer.md  lane-implementer.md  lane-reviewer.md  mcp-skill-tester.md
.claude/: settings.json
.claude/agents/: contract-planner.md  integration-reviewer.md  lane-implementer.md  lane-reviewer.md  mcp-skill-tester.md
.codex/: config.toml
.codex/agents/: contract-planner.toml  integration-reviewer.toml  lane-implementer.toml  lane-reviewer.toml  mcp-skill-tester.md  mcp-skill-tester.toml
.gemini/: settings.json
.opencode/: opencode.json
.opencode/agents/: mcp-skill-tester.md
docs/: CONTEXT.md
docs/adr/: 0001-permit-lease-typed-guard.md  0002-version-table-async-handle-off-main.md  0003-shutdown-coordinator-and-registry-cancel.md  0004-service-dependency-three-questions.md  0005-service-roles-ddd-hexagonal.md  0006-single-ml-md-write-authority.md  0007-device-state-to-state-ssot.md  0008-cfg-editor-session.md  0009-spec-value-fluent-and-literal-lock.md  0010-value-tree-complete-none-for-empty.md  0011-cfgschema-validate-boundary.md  0012-cfgbuilder-value-layer-fluent-assembly.md  0013-remote-adapter-as-second-view.md  0014-gui-shared-transport-layer.md  0015-persistence-caretaker-memento-single-file.md  0016-notebook-liveplot-auto-close-default.md  0017-worker-thread-plotting.md  0018-autofluxdep-orchestrator-requirement-resolver-builder-currying.md  0019-operation-facets-and-execution-strategy.md  0020-session-core-shared-layer.md  0021-event-ownership-domain-modules.md  0022-agent-coordination-taskboard.md  0022-agent-coordination-worktree.md  0023-cooperative-interrupt-feedback-wakeup.md  0024-embedded-agent-session-architecture.md  0025-cross-thread-interaction-channel.md  0026-operation-abstraction-runner-scope-ports.md  0027-experiment-data-persistence-native-labber-axes-list.md  0028-fluxdep-analysis-kernel.md  0029-fluxonium-prediction-engine.md  0030-arbitrary-waveform-asset-optional-recipe.md  0031-formula-recipe-complex-segments.md  0032-arbitrary-waveform-reference-time-axis.md  0033-arbitrary-waveform-delete-no-reference-scan.md  0034-arb-waveform-database-shared-asset-repository.md  0035-arb-waveform-mcp-failures-use-tool-errors.md  0036-adapter-capability-contract-validated-at-import.md  0037-measure-gui-value-lookup-resolve-once.md  0038-executor-result-tree.md  0039-qubit-params-json-owner.md  (+18 more)
lib/zcu_tools/: __init__.py  auto.py  cfg_model.py  config.py  configuration.py  datasaver.py  debug.py  default_cfg.py  flux_manager.py  library.py  sample_table.py  table.py  tools.py
notebook/: T1.ipynb  T1_curve.ipynb  dispersive.ipynb  effect_temp.ipynb  fluxdep_fit.ipynb  labber.ipynb  percell.ipynb  plot_map.ipynb  predict.ipynb  single_qubit.ipynb  specfic.ipynb  visual_data.ipynb
notebook/analysis/: T1_curve.ipynb  design.ipynb  dispersive.ipynb  effect_temp.ipynb  fluxdep_fit.ipynb  labber.ipynb  mist.ipynb  percell.ipynb  plot.ipynb  reset.ipynb  single_shot.ipynb
notebook_md/: autofluxdep.md  develope.md  overnight.md  plot.md  single_qubit.md  specfic.md  test.md
notebook_md/analysis/: Sample_merge.md  T1_curve.md  T2_curve.md  branch.md  branch_floquet.md  design.md  dispersive.md  effect_temp.md  fluxdep_fit.md  labber.md  mist.md  other.md  percell.md  plot.md  reset.md
notebook_md/hfss/: R59_C1,1_1Q.md  R59_C1,1_3Q.md  fillet_single_fluxonium.md  utils.md
script/: circle_fit.py  compare_ir_opt_allxy.py  compare_ir_opt_common.py  compare_ir_opt_cpmg.py  compare_ir_opt_rabi_check.py  compare_ir_opt_rb.py  compare_ir_opt_zigzag_sweep.py  data_server.py  download_result.py  export_autofluxdep_sample_table.py  generate_data.py  generate_fluxonium_sample.py  migrate_experiment_data.py  pyro_server.py  run_autofluxdep_gui.bat  run_autofluxdep_gui.py  run_dispersive_gui.bat  run_dispersive_gui.py  run_fluxdep_gui.bat  run_fluxdep_gui.py  run_gui.py  run_measure_gui.bat  run_measure_gui.py  start_mock_gui.py  start_server.ipynb  sync.py  test_labber.py  upload_result.py
task_plans/docs/: task_plan.md
task_plans/gui/: autofluxdep_phase_b.md  findings.md  handoff-session-core-extraction.md  progress.md  session_core_extraction.md  task_plan.md
task_plans/ir/: findings.md  progress.md  task_plan.md
task_plans/py13/: findings.md  progress.md  task_plan.md
task_plans/tool_gui/: findings.md  progress.md  task_plan.md
tests/: AI_NOTE.md  README.md  conftest.py
tests/agents/: test_agent_profiles.py  test_candidate_backlog.py  test_orchestrate_scripts.py
tests/autofluxdep_gui/: _helpers.py  conftest.py  test_acquire.py  test_acquire_helpers.py  test_artifact_paths.py  test_builders.py  test_cancellation.py  test_cfg_adapter.py  test_cfg_binding.py  test_cfg_import_contract.py  test_cfg_maker.py  test_cfg_schema.py  test_derivation.py  test_feedback.py  test_feedback_runtime.py  test_flux_device_wiring.py  test_fluxdep_export.py  test_io.py  test_labber_browser_export.py  test_lenrabi_acquire.py  test_mist_acquire.py  test_mock_flux_provision.py  test_modules.py  test_node_defaults_helpers.py  test_orchestrator.py  test_persistence.py  test_profiling.py  test_qubit_freq_acquire.py  test_qubit_freq_recovery.py  test_rename.py  test_result_io.py  test_ro_optimize_acceptance.py  test_ro_optimize_acquire.py  test_run_body.py  test_run_locks.py  test_run_report.py  test_run_store.py  test_sample_table_export.py  test_setup.py  (+8 more)
zcu_tools/: __init__.py  auto.py  config.py  configuration.py  datasaver.py  tools.py
(+2402 files in other folders)
