[project]
name = "zcu-tools"
version = "0.1.0"
description = "Tools for Qubit Measurement on ZCU216"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "tqdm",
  "matplotlib",
  "typing-extensions",
  "jupytext",
  "pydantic>=2",
]

[project.optional-dependencies]
development = ["pytest", "pytest-cov", "pytest-xdist"]
client = [
  "h5py",
  "ipykernel",
  "ipywidgets",
  "ipympl",
  "pandas",
  "scqubits",
  "plotly",
  "kaleido",
  "scipy",
  "nbformat>=4.2.0",
  "scikit-learn",
  "joblib",
  "threadpoolctl",
  "numba",
  "requests",
  "flask",
  "scikit-optimize",
  "qick @ git+https://github.com/openquantumhardware/qick.git",
  "pyyaml",
  "pyvisa",
  "pyro4",
]
gdrive = [
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "python-dotenv",
]
gui = ["zcu-tools[client]", "qtpy", "PyQt6"]
all = ["zcu_tools[development,client,gdrive,gui]"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = { "" = "lib" }
packages = ["zcu_tools"]

[tool.ruff.lint]
ignore = ["E402", "F401"]

[tool.pyright]
include = ["lib", "tests", "script"]
typeCheckingMode = "standard"
reportMissingImports = "none"
reportIncompatibleVariableOverride = "none"

[tool.pytest.ini_options]
# Tests live under tests/ (project convention). Scoping collection here keeps
# pytest from walking into scratch/ helper scripts (named test_*.py with plain
# helper functions like test(label, ...) that pytest would mis-collect as cases).
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:matplotlib.*"]

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  # "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

