[project]
name = "zcu-tools"
version = "0.1.0"
description = "Tools for Qubit Measurement on ZCU216"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "tqdm",
  "matplotlib",
  "jupytext",
  "pydantic>=2",
  # Only for PEP 728 TypedDict (closed=True / extra_items=), which stdlib
  # typing lacks on 3.13; everything else imports from typing/collections.abc.
  "typing-extensions",
]

[project.optional-dependencies]
development = ["pytest", "pytest-cov", "pytest-xdist"]
client = [
  "h5py",
  "ipykernel",
  "ipywidgets",
  "ipympl",
  "pandas",
  "scqubits",
  "plotly",
  "kaleido",
  "scipy",
  "nbformat>=4.2.0",
  "scikit-learn",
  "joblib",
  "threadpoolctl",
  "numba",
  "requests",
  "flask",
  "scikit-optimize",
  "qick @ git+https://github.com/openquantumhardware/qick.git",
  "pyyaml",
  "pyvisa",
  "pyro4",
]
gdrive = [
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "python-dotenv",
]
gui = ["zcu-tools[client]", "qtpy", "PyQt6"]
all = ["zcu_tools[development,client,gdrive,gui]"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = { "" = "lib" }
packages = ["zcu_tools"]

[tool.ruff.lint]
ignore = ["E402", "F401"]
extend-select = ["UP006", "UP007", "UP035", "UP037", "UP045"]

[tool.ruff.lint.per-file-ignores]
"script/start_server.py" = ["UP"]
"lib/zcu_tools/remote/pyro.py" = ["UP"]

[tool.pyright]
include = ["lib", "tests", "script"]
typeCheckingMode = "standard"
reportMissingImports = "none"
reportIncompatibleVariableOverride = "none"

[tool.pytest.ini_options]
# Tests live under tests/ (project convention). Scoping collection here keeps
# pytest from walking into scratch/ helper scripts (named test_*.py with plain
# helper functions like test(label, ...) that pytest would mis-collect as cases).
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:matplotlib.*"]

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  # "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

